styling/about.css
.userimage {
    max-width: 100%;
    height: auto;
    max-height: 100px;
    margin: 25px;
    display: block;
    border-radius: 50%;
}

.user {
    display: inline-block;
    text-align: center;
    align-content: center;
}

div.ribbon {
    background-color: chocolate;
    height: 30%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 60%;
    transform: translateY(-50%);
}

div.ribbon::before,
div.ribbon::after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    height: 3px;
    background-color: orange;
}

div.ribbon::before {
    top: -6px;
}

div.ribbon::after {
    bottom: -6px;
}

.name {
    display: block;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 500;
    margin-bottom: 25px
}

